[package]
name = "osmojit"
version = "0.4.1"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]
edition = "2021"
homepage = "https://osmon-lang.uz"
documentation = "https://wiki.osmon-lang.uz"
repository = "https://github.com/osmon-lang/gccjit"
description = "GCCJIT exposed API for Osmon programming language"
keywords = ["programming-language", "interpreter", "compiler","uzbek"]
readme = "readme.md"
categories = ["localization"]
license = "GPL-3.0"
exclude = ["target", ".github"]

[dependencies]
osmojit-sys = "0.4.1"
osmojit-derive = "0.4.1"