[package]
name = "osmojit-derive"
version = "0.3.0"
authors = ["Yuri Katsuki <yuri@katsuki.moe>"]
edition = "2018"
homepage = "https://osmon.dev"
documentation = "https://wiki.osmon.dev"
repository = "https://github.com/osmon-lang/gccjit"
description = "GCCJIT exposed API for Osmon programming language"
keywords = ["programming-language", "interpreter", "compiler","uzbek"]
readme = "readme.md"
categories = ["localization"]
license = "GPL-3.0"
exclude = ["target", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gccjit_derive"
proc-macro = true

[dependencies]
syn = {version = "0.15",features = ["derive"]}
proc-macro2 = "0.4"
quote = "0.6"
synstructure = "0.10"