[package]
name = "osmojit-sys"
version = "0.4.1"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]
edition = "2021"
homepage = "https://osmon-lang.uz"
documentation = "https://wiki.osmon-lang.uz"
repository = "https://github.com/osmon-lang/gccjit"
description = "GCCJIT exposed API for Osmon programming language"
keywords = ["programming-language", "interpreter", "compiler","uzbek"]
categories = ["localization"]
license = "GPL-3.0"
exclude = ["target", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.66.1"